--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.0.0
 psycopg2-binary==2.9.3
+python-decouple==3.5
+python-dotenv==0.19.2
 sqlparse==0.4.2
+waitress==2.0.0
 whitenoise==5.3.0
